learning to do a bit with the DOM

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -2,12 +2,7 @@
 <html>
     <head></head>
     <body>
-        <h1>My Kickass To-Do App</h1> 
-        <p>Remind Sara to buy a new computer mouse</p>
-        <p>Decide on Dell vs Mac for new Laptop</p>
-        <p>Paint the ceiling</p>
-        <p>fix leak in bathroom</p>
-        <p>hit the gym more often</p>
+        <h1>My Kickass To-Do App</h1> >
         <script src="todo-app.js"></script>
     </body>
 </html>
