--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -2,7 +2,8 @@
 <html>
     <head></head>
     <body>
-        <h1>My Kickass To-Do App</h1> >
+        <h1>My Kickass To-Do App</h1>
+
         <script src="todo-app.js"></script>
     </body>
 </html>
