can you just add a button

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -9,6 +9,7 @@
         <h2>Take notes and never forget </h2>
         <p>This application was created by Garth Vader</p>
         <p>Some Other Text</p>
+        <button>Create Note</button>
         <script src="note-app.js"></script>
     </body>
 </html>
