--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -4,6 +4,7 @@
     <body>
         <h1>My Kickass To-Do App</h1>
 
+        <button>Create To-Do</button>
         <script src="todo-app.js"></script>
     </body>
 </html>
