classes and ids

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -7,9 +7,10 @@
     <body>
         <h1>Notes App</h1>
         <h2>Take notes and never forget </h2>
-        <p>This application was created by Garth Vader</p>
-        <p>Some Other Text</p>
-        <button>Create Note</button>
+        <p class="note">This application was created by Garth Vader</p>
+        <p class="note">Some Other Text</p>
+        <button id="create-new-note">Create Note</button>
+        <button id="remove-all-button">Remove All Notes</button>
         <script src="note-app.js"></script>
     </body>
 </html>
